Bug fix: Image overflow

--- a/src/app/components/main/about-me-section/about-me-section.component.scss
+++ b/src/app/components/main/about-me-section/about-me-section.component.scss
@@ -18,8 +18,8 @@ section {
 
   .img-container {
     grid-area: img;
-    width: functions.rem(300);
-    height: functions.rem(300);
+    width: functions.rem(250);
+    height: functions.rem(250);
     overflow: hidden;
     border-radius: 50%;
     justify-self: center;
